# brav0

./: .gitignore  README.md  setup.cfg
brav0/: cli.py  correct.py  correction.py  dataset.py  driver.py  io.py  lexsort_op.py  model.py  plot.py  preprocess.py  rmplanets.py  rolling.py  utils.py
examples/: config.yml  example.ipynb  example.py  parameters.yml
tests/: conftest.py  test_preprocess.py  test_rolling.py  test_utils.py
tests/data/: roll_mean.txt  roll_med.txt
