[metadata]
name = brav0
description = Bayesian Radial Velcoity Zero-Point Correction
long_description = file: README.md
author = Thomas Vandal
author_email = thomasvandal@hotmail.com
url = https://github.com/vandalt/brav0
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    scipy
    pandas
    astropy
    matplotlib
    requests
    radvel
    celerite

[options.extras_require]
dev =
    ipython
    jupytext
    black
    isort
    flake8
    ipdb
    pytest
