[metadata]
name = brav0
description = Bayesian Radial Velcoity Zero-Point Correction
long_description = file: README.md
author = Thomas Vandal
author_email = thomasvandal@hotmail.com
url = https://github.com/vandalt/brav0
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    scipy
    pandas
    astropy
    matplotlib
    requests
    radvel
    astroquery
    h5py
    pymc3
    arviz
    xarray
    pymc3-ext
    aesara-theano-fallback
    exoplanet
    celerite2
    python-box
    orbits
    tqdm

[options.extras_require]
dev =
    ipython
    jupytext
    black
    isort
    flake8
    ipdb
    pytest

[options.entry_points]
console_scripts =
    brav0 = brav0.cli:main
